<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login_name">姓名:</string>
    <string name="login_pass">密碼:</string>
    <string name="login_button">登入</string>
    <string name="language_text">語言:</string>

    <string name="confirm">確定</string>
    <string name="clear">清除</string>

    <string name="nosignin">簽名檔沒簽</string>
    <string name="savesuccess">儲存成功</string>
    <string name="savefail">儲存失敗</string>
    <string name="comfirmcancel">確定要取消驗貨嗎?</string>
    <string name="notsave">不儲存</string>
    <string name="saveleft">儲存後離開</string>

    <string name="not_update">資料尚未更新</string>
    <string name="loading_data">讀取資料中</string>
    <string name="wait">請稍後</string>
    <string name="login_success">登入成功</string>
    <string name="exception">存取異常</string>
    <string name="warning">警告</string>
    <string name="not_update_message">尚有訂單未上傳，是否要將所有訂單上傳?</string>
    <string name="update">上傳</string>
    <string name="refresh_success">資料更新成功</string>
    <string name="refresh_fail">資料更新失敗</string>
    <string name="close_app">再按一次後退鍵退出應用程式</string>

    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="preview">(預覽)</string>
    <string name="untest">未驗</string>
    <string name="undone">(未完成)</string>
    <string name="write">(填寫驗表)</string>


    <string name="app_name">驗貨表單系統</string>
    <string name="other">其他</string>
    <string name="size">尺寸</string>
    <string name="function">功能</string>
    <string name="surface">表面</string>
    <string name="packaging">包裝</string>
    <string name="title_name1">業務&#8195;人員：</string>
    <string name="title_name2">船務&#8195;人員：</string>
    <string name="title_name3">供應商名稱：</string>
    <string name="title_name4">供應商代碼：</string>
    <string name="title_name5">驗表&#8195;單號：</string>
    <string name="title_name6">採購&#8195;單號：</string>
    <string name="title_name8">採購單版本：</string>

    <string name="table_header1">序號</string>
    <string name="table_header2">ITEM NO</string>
    <string name="table_header3">採樣總數</string>
    <string name="table_header4">出貨總數</string>
    <string name="table_header5">抽樣數</string>
    <string name="table_header6">單位</string>
    <string name="table_header7">品質不良件數</string>
    <string name="table_header8">尺寸</string>
    <string name="table_header9">功能</string>
    <string name="table_header10">表面</string>
    <string name="table_header11">包裝</string>
    <string name="table_header12">正嘜</string>
    <string name="table_header13">側嘜</string>
    <string name="table_header14">合格</string>
    <string name="table_header15">不合格</string>
    <string name="table_header16">可出</string>
    <string name="table_header17">特採</string>
    <string name="table_header18">重工</string>
    <string name="table_header19">拒收</string>
    <string name="table_header20">預定再驗貨日</string>
    <string name="table_header21">備註</string>


    <string name="table_footer1">不合格處理</string>
    <string name="table_footer2">三千檢驗人員載名不合格原因</string>
    <string name="table_footer3">三千業務回覆後續建議事項</string>
    <string name="table_footer4">不合格序號</string>
    <string name="table_footer5">ITEM NO</string>
    <string name="table_footer6">不合格原因</string>

    <string name="table_footer7">檢驗人員:</string>
    <string name="table_footer8">日期</string>
    <string name="table_footer9">業務人員:</string>
    <string name="table_footer10">填表說明</string>
    <string name="table_footer11">＊ 抽樣檢驗標準請依成品檢驗規範程序書要求.</string>
    <string name="table_footer12">＊ 如採購總數與出貨總數相等,則出貨總數免填，如有不符請依實際數據填入出貨總數. </string>
    <string name="table_footer13">＊ 正側嘜如相符請以V表示；如外鄉成寬高以及毛重與採購單相同則免填，如與採購單不符需另填入通知船務修改資料. </string>
    <string name="table_footer14">＊ 出貨判定請以V表示，如判定為特採出貨或拒收者，三千業務需另回覆後續建議事項，可出貨重工則免.</string>
    <string name="table_footer15">供應商檢測人員:</string>
    <string name="table_footer16">船務備註:</string>

    <string-array name="language">
        <item>繁體中文</item>
        <item>简体中文</item>
    </string-array>
    <string name="table_button1">取消</string>
    <string name="table_button2">編輯</string>
    <string name="table_button3">儲存</string>
    <string name="table_button4">送出</string>

    <string name="comfirm_button">確認</string>
    <string name="company_title">驗貨行程</string>
    <string name="commpany_prepage">＜前一頁＞</string>
    <string name="company_nextpage">＜後一頁＞</string>
    <string name="inspect_content_title">驗貨內容</string>
    <string name="inspect_content_title1">供應商名稱</string>
    <string name="inspect_content_title2">採購單 編號</string>
    <string name="inspect_content_title3">採購單 版本</string>
    <string name="inspect_content_title4">驗貨完畢</string>
    <string name="inspect_content_title5">可否出貨</string>
    <string name="inspect_content_title6">驗表預覽</string>
    <string name="inspect_content_title7">是</string>
    <string name="inspect_content_title8">否</string>
    <string name="inspect_content_title9">未驗</string>
    <string name="inspect_content_title10">(預覽)</string>
    <string name="inspect_content_title11">(填寫驗貨表)</string>
    <string name="insepectorder">採購單</string>
    <string name="ordernumber">採購單編號：</string>
    <string name="note">備註：</string>
    <string name="notice">注意事項</string>
    <string name="product">產品</string>
    <string name="specification">規格說明</string>
    <string name="updatedata">更新資料</string>
    <string name="refreshing">更新資料中</string>
    <string name="updating">上傳資料中</string>
    <string name="download_image">下載圖片</string>
    <string name="download_success">下載完成</string>
    <string name="download_fail">下載失敗</string>
    <string name="download_fail_info">請確保網路穩定以及儲存空間是否充足</string>
    <string name="redownload">重新下載</string>
    <string name="reupdate">重新更新</string>
    <string name="downloading">下載檔案中...</string>
    <string name="logout">登出</string>
    <string name="logout_success">登出成功</string>
    <string name="qty_more_than_oderqty">出貨總數不能大於採樣總數</string>
    <string name="unfill_recheckdate1">不可出貨時，需填寫預定再驗貨日期</string>
    <string name="unfill_recheckdate2">可出貨時，不需填寫預定再驗貨日期</string>
    <string name="unfill_recheckdate3">請確認不合格原因是否已填寫</string>
    <string-array name="menu_item">
        <item>驗表行程</item>
        <item>不合格原因</item>
        <item>設定</item>
    </string-array>
    <string-array name="type1">
        <item>A1</item>
        <item>A2</item>
        <item>A3</item>
    </string-array>
    <string-array name="type2">
        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
        <item>B4</item>
        <item>B5</item>
        <item>B6</item>
        <item>B7</item>
    </string-array>
    <string-array name="type3">
        <item>C1</item>
        <item>C2</item>
        <item>C3</item>
        <item>C4</item>
        <item>C5</item>
        <item>C6</item>
        <item>C7</item>
        <item>C8</item>
    </string-array>
    <string-array name="type4">
        <item>D1</item>
        <item>D2</item>
        <item>D3</item>
        <item>D4</item>
        <item>D5</item>
        <item>D6</item>
        <item>D7</item>
        <item>D8</item>
    </string-array>
    <string-array name="type1_description">
        <item>尺寸與圖面不符</item>
        <item>尺寸超過公差</item>
        <item>孔位cc超公差</item>
    </string-array>
    <string-array name="type2_description">
        <item>牙型錯誤</item>
        <item>漏攻牙/崩牙</item>
        <item>牙深不足/歪斜</item>
        <item>牙洞難鎖</item>
        <item>把手翹腳</item>
        <item>活動性不佳</item>
        <item>機構做動異常</item>
    </string-array>
    <string-array name="type3_description">
        <item>刮傷.撞傷.變形.毛邊.麻點.生鏽</item>
        <item>起泡.亮點.毛刺.沙孔.吐酸.髒汙.白斑</item>
        <item>烤漆橘皮.流漆.色差.顏色錯誤.脫落</item>
        <item>電鍍色差.顏色錯誤.脫落</item>
        <item>未過3H硬度測試</item>
        <item>未過24小時中性鹽霧測試</item>
        <item>未過48小時中性鹽霧測試</item>
        <item>未過百格測試要求</item>
    </string-array>
    <string-array name="type4_description">
        <item>產品混裝/型號錯誤</item>
        <item>各項配件/螺絲/包裝錯誤.遺漏</item>
        <item>各項配件/螺絲/尺寸錯誤</item>
        <item>條碼/標籤/貼紙張貼錯誤.遺漏</item>
        <item>產品/外箱/內盒包裝數量錯誤</item>
        <item>正/側嘜/內盒印刷錯誤</item>
        <item>外箱/內盒/包材尺寸錯誤</item>
        <item>包材/內外箱/棧板破損</item>
    </string-array>
</resources>