<?xml version="1.0" encoding="utf-8"?>

<!-- 2個欄位 -->
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/black">


    <TextView
        android:layout_marginRight="1dp"
        android:background="@android:color/white"
        android:padding="5dp"
        android:text="@string/inspect_content_title2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_marginRight="1dp"
        android:background="@android:color/white"
        android:padding="5dp"
        android:text="@string/inspect_content_title3"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_marginRight="1dp"
        android:background="@android:color/white"
        android:padding="5dp"
        android:text="@string/inspect_content_title4"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_marginRight="1dp"
        android:background="@android:color/white"
        android:padding="5dp"
        android:text="@string/table_header16"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_marginRight="1dp"
        android:background="@android:color/white"
        android:padding="5dp"
        android:text="@string/table_header17"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_marginRight="1dp"
        android:background="@android:color/white"
        android:padding="5dp"
        android:text="@string/table_header18"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_marginRight="1dp"
        android:background="@android:color/white"
        android:padding="5dp"
        android:text="@string/table_header19"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:background="@android:color/white"
        android:padding="5dp"
        android:text="@string/inspect_content_title6"
        android:textAppearance="?android:attr/textAppearanceLarge" />
</TableRow>
